@@ -16,6 +16,7 @@ Coccinella-0.9*
  o much faster roster population code
  o added roster search method
  o added md5 hash checks for file transfer (bytestreams)
+ o added proxy support for bytestreams
 
 Coccinella-0.95.16 (20070214):
 
